--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,9 @@
+cmake_minimum_required(VERSION 3.16)
 
-file(GLOB SRC "*.c")
-file(GLOB HDR "*.h")
+project(date-parser
+        VERSION 1.0.0
+        LANGUAGES C)
 
-set(DATE_PARSER "date-parser")
-add_executable(${DATE_PARSER} ${SRC} ${HDR})
+set(OUT_NAME ${PROJECT_NAME})
 
-set(OUT_DIR ${PROJECT_SOURCE_DIR}/out)
-
-message(STATUS "output dir = ${OUT_DIR}")
-
-set_target_properties(${DATE_PARSER} PROPERTIES
-                                     OUTPUT_NAME ${DATE_PARSER}
-                                     RUNTIME_OUTPUT_DIRECTORY ${OUT_DIR}
-                                     )
+add_subdirectory(src)
